--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.3"
 # command to install dependencies
 install:
-    - pip install -r pylint
+    - "pip install pylint --use-mirrors"
 # command to run tests
 script: 
     - nosetests
